[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "pyqtgraph-ext"
description = "Collection of PyQtGraph widgets/tools."
dynamic = ["version"]
authors = [
    {name = "Marcel Goldschen-Ohm", email = "goldschen-ohm@utexas.edu"},
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.2",
    "qtpy>=2.4.1",
    "qtawesome>=1.3.0",
    "pyqtgraph>=0.13.3",
    "pyqt-ext>=1.2.7",
]
readme = "README.md"
keywords = ["pyqtgraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]


[project.urls]
homepage = "https://github.com/marcel-goldschen-ohm/pyqtgraph-ext"
repository = "https://github.com/marcel-goldschen-ohm/pyqtgraph-ext"


[tool.pdm]
distribution = true


[tool.pdm.version]
source = "scm"


[tool.pdm.dev-dependencies]
#dev = [
#    "-e pyqt-ext @ file:///${PROJECT_ROOT}/../pyqt-ext",
#]
lint = [
    "flake8",
]
test = [
    "pytest",
    "pytest-cov",
]
